--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,19 @@
           <artifactId>dotenv-java</artifactId>
           <version>3.0.0</version>
         </dependency>
+         <!-- ADD THIS: The lightweight web server -->
+    <dependency>
+        <groupId>io.javalin</groupId>
+        <artifactId>javalin</artifactId>
+        <version>6.1.3</version> <!-- Use the latest version -->
+    </dependency>
+
+    <!-- ADD THIS: Javalin uses SLF4J for logging, so you need an implementation -->
+    <dependency>
+        <groupId>org.slf4j</groupId>
+        <artifactId>slf4j-simple</artifactId>
+        <version>2.0.13</version>
+    </dependency>
 
     </dependencies>
 
@@ -50,14 +63,10 @@
     <build>
         <plugins>
             <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>exec-maven-plugin</artifactId>
-                <version>3.2.0</version> <!-- Use a recent plugin version -->
-                <configuration>
-                    <!-- This MUST match your package and class name -->
-                    <mainClass>com.chatbot.vertex.App</mainClass>
-                </configuration>
-            </plugin>
+    <groupId>org.codehaus.mojo</groupId>
+    <artifactId>exec-maven-plugin</artifactId>
+    <version>3.2.0</version>
+</plugin>
         </plugins>
     </build>
 </project>
