socket with single command mvn exec:java(can delete rest 2 files at this point)

--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,10 @@
     <groupId>org.codehaus.mojo</groupId>
     <artifactId>exec-maven-plugin</artifactId>
     <version>3.2.0</version>
+     <configuration>
+                <!-- SET THE DEFAULT MAIN CLASS HERE -->
+                <mainClass>com.chatbot.vertex.App</mainClass>
+            </configuration>
 </plugin>
         </plugins>
     </build>
