--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,11 @@
       <artifactId>pinecone-client</artifactId>
       <version>1.2.1</version>
     </dependency>
+    <dependency>
+    <groupId>com.google.cloud</groupId>
+    <artifactId>google-cloud-bigquery</artifactId>
+    <version>2.32.0</version>
+</dependency>
 
      <dependency>
             <groupId>com.google.cloud</groupId>
