--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,8 @@ proj-newsshield-prod-infra-55daa0677b9d (1).json
 inputFiles.lst
 Untitled spreadsheet (2).xlsx
 
+input.pdf
+output.md
 
 # Maven build output
 /target/
