--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,11 @@
     <artifactId>okhttp</artifactId>
     <version>4.12.0</version>
 </dependency>
+<dependency>
+    <groupId>org.json</groupId>
+    <artifactId>json</artifactId>
+    <version>20231013</version>
+</dependency>
 
      <!-- ADD THIS: Javalin uses SLF4J for logging, so you need an implementation -->
     <dependency>
