--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,11 @@
     <artifactId>json</artifactId>
     <version>20231013</version>
 </dependency>
+<dependency>
+    <groupId>org.mongodb</groupId>
+    <artifactId>mongodb-driver-sync</artifactId>
+    <version>4.11.1</version> <!-- Or the latest version -->
+</dependency>
 
      <!-- ADD THIS: Javalin uses SLF4J for logging, so you need an implementation -->
     <dependency>
